force-app/main/default/objects/NIC_Envio__c/NIC_Envio__c.object-meta.xml
<CustomObject>
    <label>NIC Envío</label>
    <nameField>
        <displayFormat>ENV - {0000000}</displayFormat>
        <label>Nombre de Envío</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIC Envíos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>