force-app/main/default/objects/NIC_Envio__c/fields/Agrupamiento__c.field-meta.xml
<CustomField>
    <fullName>Agrupamiento__c</fullName>
    <label>Agrupamiento</label>
    <length>250</length>
    <type>Text</type>
</CustomField>