force-app/main/default/objects/NIC_Envio__c/fields/Bultos__c.field-meta.xml
<CustomField>
    <fullName>Bultos__c</fullName>
    <label>Bultos</label>
    <length>250</length>
    <type>Text</type>
</CustomField>