force-app/main/default/objects/NIC_Envio__c/fields/Cantidad_de_Salida_a_Reparto__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Salida_a_Reparto__c</fullName>
    <label>Cantidad de Salida a Reparto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>