force-app/main/default/objects/NIC_Envio__c/fields/Cerrado__c.field-meta.xml
<CustomField>
    <fullName>Cerrado__c</fullName>
    <formula>IF(Fecha_Cumplimiento__c!= null , true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cerrado</label>
    <type>Checkbox</type>
</CustomField>