force-app/main/default/objects/NIC_Envio__c/fields/CodigoPostalDestinatario__c.field-meta.xml
<CustomField>
    <fullName>CodigoPostalDestinatario__c</fullName>
    <label>Código Postal Destino</label>
    <length>50</length>
    <type>Text</type>
</CustomField>