force-app/main/default/objects/NIC_Envio__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañía</label>
    <length>250</length>
    <type>Text</type>
</CustomField>