force-app/main/default/objects/NIC_Envio__c/fields/CP_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>CP_de_Envio__c</fullName>
    <label>CP de Envió</label>
    <length>250</length>
    <type>Text</type>
</CustomField>