force-app/main/default/objects/NIC_Envio__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NIC Envíos</relationshipLabel>
    <relationshipName>NIC_Envios</relationshipName>
    <type>Lookup</type>
</CustomField>