force-app/main/default/objects/NIC_Envio__c/fields/Cuenta_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Paciente__c</fullName>
    <externalId>true</externalId>
    <label>Cuenta Paciente</label>
    <length>250</length>
    <type>Text</type>
</CustomField>