force-app/main/default/objects/NIC_Envio__c/fields/Desvio__c.field-meta.xml
<CustomField>
    <fullName>Desvio__c</fullName>
    <label>Desvío</label>
    <length>250</length>
    <type>Text</type>
</CustomField>