force-app/main/default/objects/NIC_Envio__c/fields/Desvio_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Desvio_Logistica__c</fullName>
    <label>Desvío Logística</label>
    <length>250</length>
    <type>Text</type>
</CustomField>