force-app/main/default/objects/NIC_Envio__c/fields/Dias_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Dias_Entrega__c</fullName>
    <formula>datevalue(Fecha_Ingreso__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias Entrega</label>
    <type>Date</type>
</CustomField>