force-app/main/default/objects/NIC_Envio__c/fields/Direccion_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Envio__c</fullName>
    <label>Dirección de Envío</label>
    <type>TextArea</type>
</CustomField>