force-app/main/default/objects/NIC_Envio__c/fields/DomicilioDestinatario__c.field-meta.xml
<CustomField>
    <fullName>DomicilioDestinatario__c</fullName>
    <label>Domicilio del Destinatario</label>
    <type>TextArea</type>
</CustomField>