force-app/main/default/objects/NIC_Envio__c/fields/Estado_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_pedido__c</fullName>
    <formula>IF( Fecha_Cumplimiento__c!=null ,&apos;Entregado&apos;,
IF(Fecha_Entrega__c!=null ,&apos;Entregado&apos;,
IF(Fecha_Primera_Salida_Reparto__c !=null ,&apos;En reparto&apos;,
IF(Fecha_Salida_del_Camion__c!=null ,&apos;En viaje a sucursal&apos; ,
IF(Fecha_de_llegada_Sucursal__c!=null ,&apos;En sucursal&apos; ,
IF(Fecha_Preparacion__c!=null ,&apos;En Preparación&apos;, &apos;&apos;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de pedido</label>
    <type>Text</type>
</CustomField>