force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga__c</fullName>
    <label>Fecha Carga</label>
    <length>250</length>
    <type>Text</type>
</CustomField>