force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Carga_del_camion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga_del_camion__c</fullName>
    <label>Fecha Carga del camión</label>
    <length>250</length>
    <type>Text</type>
</CustomField>