force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Consolidacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Consolidacion__c</fullName>
    <label>Fecha Consolidación</label>
    <length>250</length>
    <type>Text</type>
</CustomField>