force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cumplimiento__c</fullName>
    <label>Fecha Cumplimiento</label>
    <length>250</length>
    <type>Text</type>
</CustomField>