force-app/main/default/objects/NIC_Envio__c/fields/Fecha_de_Conformidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Conformidad__c</fullName>
    <label>Fecha de Conformidad</label>
    <length>250</length>
    <type>Text</type>
</CustomField>