force-app/main/default/objects/NIC_Envio__c/fields/Fecha_de_llegada_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_llegada_Sucursal__c</fullName>
    <label>Fecha de llegada Sucursal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>