force-app/main/default/objects/NIC_Envio__c/fields/Fecha_de_llegada_Sucursal_Date__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_llegada_Sucursal_Date__c</fullName>
    <formula>DATE(VALUE(MID(Fecha_de_llegada_Sucursal__c, 7,4)),
VALUE(MID(Fecha_de_llegada_Sucursal__c,4,2)),
VALUE(MID(Fecha_de_llegada_Sucursal__c,1,2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de llegada Sucursal (Date)</label>
    <type>Date</type>
</CustomField>