force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Despacho__c</fullName>
    <label>Fecha Despacho</label>
    <length>250</length>
    <type>Text</type>
</CustomField>