force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega__c</fullName>
    <label>Fecha Entrega</label>
    <length>250</length>
    <type>Text</type>
</CustomField>