force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Final_Picking__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Final_Picking__c</fullName>
    <label>Fecha Final Picking</label>
    <length>250</length>
    <type>Text</type>
</CustomField>