force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso__c</fullName>
    <label>Fecha Ingreso</label>
    <length>250</length>
    <type>Text</type>
</CustomField>