force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Inicio_Picking__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Picking__c</fullName>
    <label>Fecha Inicio Picking</label>
    <length>250</length>
    <type>Text</type>
</CustomField>