force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Objetivo_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Objetivo_Logistica__c</fullName>
    <label>Fecha Objetivo Logística</label>
    <length>250</length>
    <type>Text</type>
</CustomField>