force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Objetivo_Logistica_Date__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Objetivo_Logistica_Date__c</fullName>
    <formula>DATE(VALUE(MID(Fecha_Objetivo_Logistica__c, 7,4)),
VALUE(MID(Fecha_Objetivo_Logistica__c,4,2)),
VALUE(MID(Fecha_Objetivo_Logistica__c,1,2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Objetivo Logística (Date)</label>
    <type>Date</type>
</CustomField>