force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Pactada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pactada__c</fullName>
    <label>Fecha Pactada</label>
    <length>250</length>
    <type>Text</type>
</CustomField>