force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Preparacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Preparacion__c</fullName>
    <label>Fecha Preparación</label>
    <length>250</length>
    <type>Text</type>
</CustomField>