force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Primera_Salida_Reparto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Primera_Salida_Reparto__c</fullName>
    <label>Fecha Primera Salida Reparto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>