force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Primera_Salida_Reparto_Date__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Primera_Salida_Reparto_Date__c</fullName>
    <formula>DATE(VALUE(MID(Fecha_Primera_Salida_Reparto__c, 7,4)),
VALUE(MID(Fecha_Primera_Salida_Reparto__c,4,2)),
VALUE(MID(Fecha_Primera_Salida_Reparto__c,1,2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Primera Salida Reparto (Date)</label>
    <type>Date</type>
</CustomField>