force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Salida_del_Camion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Salida_del_Camion__c</fullName>
    <label>Fecha Salida del Camión</label>
    <length>250</length>
    <type>Text</type>
</CustomField>