force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Salida_del_Camion_Date__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Salida_del_Camion_Date__c</fullName>
    <formula>DATE(VALUE(MID(Fecha_Salida_del_Camion__c, 7,4)),
VALUE(MID(Fecha_Salida_del_Camion__c,4,2)),
VALUE(MID(Fecha_Salida_del_Camion__c,1,2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Salida del Camión (Date)</label>
    <type>Date</type>
</CustomField>