force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Transporte__c</fullName>
    <label>Fecha Transporte</label>
    <length>250</length>
    <type>Text</type>
</CustomField>