force-app/main/default/objects/NIC_Envio__c/fields/Fecha_Ultima_Salida_Reparto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Salida_Reparto__c</fullName>
    <label>Fecha Última Salida Reparto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>