force-app/main/default/objects/NIC_Envio__c/fields/FechaRendicion__c.field-meta.xml
<CustomField>
    <fullName>FechaRendicion__c</fullName>
    <label>Fecha rendición de remito</label>
    <length>250</length>
    <type>Text</type>
</CustomField>