force-app/main/default/objects/NIC_Envio__c/fields/Horario_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Horario_Ingreso__c</fullName>
    <label>Horario Ingreso</label>
    <length>250</length>
    <type>Text</type>
</CustomField>