force-app/main/default/objects/NIC_Envio__c/fields/Horas_Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Horas_Cumplimiento__c</fullName>
    <label>Horas Cumplimiento</label>
    <length>250</length>
    <type>Text</type>
</CustomField>