force-app/main/default/objects/NIC_Envio__c/fields/Horas_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Horas_Entrega__c</fullName>
    <label>Horas Entrega</label>
    <length>250</length>
    <type>Text</type>
</CustomField>