force-app/main/default/objects/NIC_Envio__c/fields/Horas_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Horas_Objetivo__c</fullName>
    <label>Horas Objetivo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>