force-app/main/default/objects/NIC_Envio__c/fields/Horas_Objetivo_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Horas_Objetivo_Logistica__c</fullName>
    <label>Horas Objetivo Logística</label>
    <length>250</length>
    <type>Text</type>
</CustomField>