force-app/main/default/objects/NIC_Envio__c/fields/Id_de_cuenta_SAP__c.field-meta.xml
<CustomField>
    <fullName>Id_de_cuenta_SAP__c</fullName>
    <externalId>true</externalId>
    <label>Id de cuenta SAP</label>
    <length>250</length>
    <type>Text</type>
</CustomField>