force-app/main/default/objects/NIC_Envio__c/fields/Link_al_remito_texto__c.field-meta.xml
<CustomField>
    <fullName>Link_al_remito_texto__c</fullName>
    <label>Link al remito texto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>