force-app/main/default/objects/NIC_Envio__c/fields/Link_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Link_Seguimiento__c</fullName>
    <formula>HYPERLINK(&apos;http://www.cruzdelsur.com/herramientas_seguimiento_resultado.php?nic=&apos;+ NIC__c,
											NIC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Seguimiento</label>
    <type>Text</type>
</CustomField>