force-app/main/default/objects/NIC_Envio__c/fields/Link_Seguimiento_completo__c.field-meta.xml
<CustomField>
    <fullName>Link_Seguimiento_completo__c</fullName>
    <formula>&apos;http://www.cruzdelsur.com/herramientas_seguimiento_resultado.php?nic=&apos;+ NIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Seguimiento completo</label>
    <type>Text</type>
</CustomField>