force-app/main/default/objects/NIC_Envio__c/fields/LinkPDF__c.field-meta.xml
<CustomField>
    <fullName>LinkPDF__c</fullName>
    <formula>HYPERLINK(Link_al_remito_texto__c,NIC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link al remito</label>
    <type>Text</type>
</CustomField>