force-app/main/default/objects/NIC_Envio__c/fields/Localidad_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Localidad_de_Envio__c</fullName>
    <label>Localidad de Envío</label>
    <length>250</length>
    <type>Text</type>
</CustomField>