force-app/main/default/objects/NIC_Envio__c/fields/ltima_Instancia__c.field-meta.xml
<CustomField>
    <fullName>ltima_Instancia__c</fullName>
    <label>Última Instancia</label>
    <length>250</length>
    <type>Text</type>
</CustomField>