force-app/main/default/objects/NIC_Envio__c/fields/Mismo_Dia__c.field-meta.xml
<CustomField>
    <fullName>Mismo_Dia__c</fullName>
    <label>Mismo Día</label>
    <length>250</length>
    <type>Text</type>
</CustomField>