force-app/main/default/objects/NIC_Envio__c/fields/N_de_factura__c.field-meta.xml
<CustomField>
    <fullName>N_de_factura__c</fullName>
    <label>N° de factura</label>
    <length>250</length>
    <type>Text</type>
</CustomField>