force-app/main/default/objects/NIC_Envio__c/fields/NDeGuia__c.field-meta.xml
<CustomField>
    <fullName>NDeGuia__c</fullName>
    <label>N° de Guia</label>
    <length>250</length>
    <type>Text</type>
</CustomField>