force-app/main/default/objects/NIC_Envio__c/fields/NIC__c.field-meta.xml
<CustomField>
    <fullName>NIC__c</fullName>
    <externalId>true</externalId>
    <label>NIC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>