force-app/main/default/objects/NIC_Envio__c/fields/NIC_redireccionado__c.field-meta.xml
<CustomField>
    <fullName>NIC_redireccionado__c</fullName>
    <label>NIC redireccionado</label>
    <length>250</length>
    <type>Text</type>
</CustomField>