force-app/main/default/objects/NIC_Envio__c/fields/Nro_Delivery_SAP__c.field-meta.xml
<CustomField>
    <fullName>Nro_Delivery_SAP__c</fullName>
    <label>Nro Delivery SAP</label>
    <length>250</length>
    <type>Text</type>
</CustomField>