force-app/main/default/objects/NIC_Envio__c/fields/Objetivo_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_Entrega__c</fullName>
    <label>Objetivo de Entrega</label>
    <length>250</length>
    <type>Text</type>
</CustomField>