force-app/main/default/objects/NIC_Envio__c/fields/Observaciones_Vuelta_de_Reparto__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Vuelta_de_Reparto__c</fullName>
    <label>Observaciones Entrega o Retiro</label>
    <type>TextArea</type>
</CustomField>