force-app/main/default/objects/NIC_Envio__c/fields/Observado__c.field-meta.xml
<CustomField>
    <fullName>Observado__c</fullName>
    <label>Observado</label>
    <length>250</length>
    <type>Text</type>
</CustomField>