force-app/main/default/objects/NIC_Envio__c/fields/On_Time__c.field-meta.xml
<CustomField>
    <fullName>On_Time__c</fullName>
    <label>On Time</label>
    <length>250</length>
    <type>Text</type>
</CustomField>