force-app/main/default/objects/NIC_Envio__c/fields/On_Time_Logistica__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Logistica__c</fullName>
    <label>On Time Logística</label>
    <length>250</length>
    <type>Text</type>
</CustomField>