force-app/main/default/objects/NIC_Envio__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <formula>IF( Cuenta__c &lt;&gt; null, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paciente</label>
    <type>Checkbox</type>
</CustomField>