force-app/main/default/objects/NIC_Envio__c/fields/Planilla_Rendicion_Conforme__c.field-meta.xml
<CustomField>
    <fullName>Planilla_Rendicion_Conforme__c</fullName>
    <label>Planilla Rendición Conforme</label>
    <length>250</length>
    <type>Text</type>
</CustomField>