force-app/main/default/objects/NIC_Envio__c/fields/Plazo_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Entrega__c</fullName>
    <label>Plazo Entrega</label>
    <length>250</length>
    <type>Text</type>
</CustomField>