force-app/main/default/objects/NIC_Envio__c/fields/Primera_Instancia__c.field-meta.xml
<CustomField>
    <fullName>Primera_Instancia__c</fullName>
    <label>Primera Instancia</label>
    <length>250</length>
    <type>Text</type>
</CustomField>