force-app/main/default/objects/NIC_Envio__c/fields/Producto_Faltante__c.field-meta.xml
<CustomField>
    <fullName>Producto_Faltante__c</fullName>
    <label>Producto Faltante</label>
    <length>250</length>
    <type>Text</type>
</CustomField>