force-app/main/default/objects/NIC_Envio__c/fields/Remito_cerrado__c.field-meta.xml
<CustomField>
    <fullName>Remito_cerrado__c</fullName>
    <formula>IF(ISBLANK(Link_al_remito_texto__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remito cerrado</label>
    <type>Checkbox</type>
</CustomField>