force-app/main/default/objects/NIC_Envio__c/fields/Remito_fecha__c.field-meta.xml
<CustomField>
    <fullName>Remito_fecha__c</fullName>
    <label>Remito fecha</label>
    <length>250</length>
    <type>Text</type>
</CustomField>