force-app/main/default/objects/NIC_Envio__c/fields/Remito_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Remito_Logistica__c</fullName>
    <label>Remito Logística</label>
    <length>250</length>
    <type>Text</type>
</CustomField>