force-app/main/default/objects/NIC_Envio__c/fields/Sucursal_de_Destino__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_de_Destino__c</fullName>
    <label>Sucursal de Destino</label>
    <length>250</length>
    <type>Text</type>
</CustomField>