force-app/main/default/objects/NIC_Envio__c/fields/TelefonoDestinatario__c.field-meta.xml
<CustomField>
    <fullName>TelefonoDestinatario__c</fullName>
    <label>Teléfono del Destinatario</label>
    <length>250</length>
    <type>Text</type>
</CustomField>