force-app/main/default/objects/NIC_Envio__c/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bomba</fullName>
            </value>
            <value>
                <fullName>Remito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>