force-app/main/default/objects/NIC_Envio__c/fields/Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tratamiento</label>
    <referenceTo>Tratamiento__c</referenceTo>
    <relationshipLabel>NIC Envíos</relationshipLabel>
    <relationshipName>NIC_Env_os</relationshipName>
    <type>Lookup</type>
</CustomField>