force-app/main/default/objects/NIC_Envio__c/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <label>Unidades</label>
    <length>250</length>
    <type>Text</type>
</CustomField>