force-app/main/default/objects/NIC_Envio__c/fields/Valor_Declarado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Declarado__c</fullName>
    <label>Valor Declarado</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>