force-app/main/default/objects/NIC_Envio__c/fields/Viaje__c.field-meta.xml
<CustomField>
    <fullName>Viaje__c</fullName>
    <label>Referencia del viaje</label>
    <type>TextArea</type>
</CustomField>