force-app/main/default/objects/NIC_Envio__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <length>250</length>
    <type>Text</type>
</CustomField>