force-app/main/default/objects/NIC_Envio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remito_fecha__c</columns>
    <columns>Id_de_cuenta_SAP__c</columns>
    <columns>Compania__c</columns>
    <columns>Fecha_Entrega__c</columns>
    <columns>Link_Seguimiento__c</columns>
    <columns>Cerrado__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado_de_pedido__c</field>
        <operation>equals</operation>
        <value>Entregado</value>
    </filters>
    <label>Todos</label>
</ListView>